Fixed padding on newsletter bar on mobile

--- a/app/assets/stylesheets/_newsletter.sass
+++ b/app/assets/stylesheets/_newsletter.sass
@@ -26,7 +26,7 @@
     padding: .5rem
     width: 100px
     background-color: $color-blue-3
-    
+
     &:hover
       background-color: darken($color-blue-3, 10%)
 
@@ -39,6 +39,8 @@
 
 @media (max-width: $media-small-max)
   .newsletter_bar
+    padding-top: 1rem
+    padding-bottom: 1rem
     span#mc_embed_signup_scroll
       .mc-field-group
         display: block
